changed some files

--- a/virtualgallery/index.html
+++ b/virtualgallery/index.html
@@ -30,7 +30,7 @@ border-style: none;
 	
 <p> <h1>ABOVE THE CLOUDS</h1>  </p>
 
-<p> <h2>Have you ever wondered what else is out there? Are aliens really real? We're going to explore that in this virtual gallery using p5.js to illustrate things above the clouds, right on your screen. Get ready to experience everything the galaxy has to offer. <br><br>Buckle up and get ready for take off. Enjoy the ride. <br><br> 
+<p> <h2>Have you ever wondered what else is out there? Are aliens really real? We're going to explore that in this virtual gallery using p5.js to illustrate things above the clouds, right on your screen. Attached is a playlist with space-themed tunes to maximize your immersive experience. Get ready to experience everything the galaxy has to offer. <br><br>Buckle up and get ready for take off. Enjoy the ride. <br><br> 
 
 	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7MPYSD8eQcfs8PVcMZTRBl?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
