--- a/virtualgallery/orbit/orbit.html
+++ b/virtualgallery/orbit/orbit.html
@@ -13,6 +13,6 @@
 <body>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script> -->
 
-  <a href="../index.html"> <button ><span><h2 style="color: black;">Reach for the stars</h2></span></button> </h2> </p>
+  <a href="../index.html"> <button ><span><h2 style="color: black;">Restart your journey here</h2></span></button> </h2> </p>
 </body>
 </html>
