--- a/virtualgallery/stars/stars.html
+++ b/virtualgallery/stars/stars.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>stars!</title>
+  <title>Reach for the stars</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script src="js/sketch.js"></script>
 <script src="libraries/p5.js"></script>
