--- a/virtualgallery/planets/planets.html
+++ b/virtualgallery/planets/planets.html
@@ -15,6 +15,6 @@
 
 
 
-<a href="../galaxy/galaxy.html"> <button ><span><h2 style="color: black;">Space exploration</h2></span></button> </h2> </p>
+<a href="../galaxy/galaxy.html"> <button ><span><h2 style="color: black;">The Milky Way</h2></span></button> </h2> </p>
 </body>
 </html>
