--- a/stuviewredesign/page4/index.html
+++ b/stuviewredesign/page4/index.html
@@ -94,7 +94,7 @@ Thank you for your payment! Transaction #34535 has been received. A copy of your
 <!-- return button code -->
 
 <div id="returnbutton">
-  <li><a href="../index.html" style="color: white;">Return to Dashboard</a></li>
+  <li><a href="../Dashboard/index.html" style="color: white;">Return to Dashboard</a></li>
 </div>
 
 
